--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,22 +1,22 @@
 .cards {
-    padding-top: 20px;
+  padding-top: 20px;
 }
 
 .cards__list {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 413px);
-    justify-content: center;
-    gap: 40px 20px;
-    border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
+  list-style-type: none;
+  padding: 0 0 36px;
+  margin: 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 413px);
+  justify-content: center;
+  gap: 40px 20px;
+  border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
 
-@media screen and (max-width: 627px){
-.cards__list {
+@media screen and (max-width: 627px) {
+  .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
-}
-
-        
+    row-gap: 20px;
+    padding: 0 0 20px;
+  }
 }
