--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,11 +1,11 @@
 .header {
-    background-color: #FFF;
-    padding: 10px;
-    display: flex;
-    justify-content: center;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 10px;
+  display: flex;
+  justify-content: center;
 }
 
 .header_logo {
-    width: 94px;
-    height: 26px;
+  width: 94px;
+  height: 26px;
 }
