--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -43,6 +43,10 @@
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1;
 }
 
 .profile__edit-btn::before {
