--- a/blocks/card.css
+++ b/blocks/card.css
@@ -10,6 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  max-width: 413px;
 }
 
 .card__title {
@@ -33,6 +34,7 @@
   background-color: transparent;
   opacity: 40%;
   transition: opacity 0.5s ease-in-out;
+  cursor: pointer;
 }
 
 .card__like-btn:hover {
@@ -46,6 +48,9 @@
 
   .card__title {
     font-size: 16px;
-    max-width: 95px;
+  }
+
+  .card__content {
+    max-width: 288px;
   }
 }
