--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -71,6 +71,7 @@
   font-weight: 500;
   line-height: 1;
   padding: 0;
+  cursor: pointer;
 }
 
 .profile__edit-btn:hover {
@@ -101,6 +102,7 @@
   justify-content: center;
   transition: opacity 0.5s ease-in-out;
   border: none;
+  cursor: pointer;
 }
 
 .profile__add-btn:hover {
