--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -10,10 +10,10 @@
   align-items: center;
   justify-content: center;
   padding: 0 20px;
-  /* visibility: hidden; */
+  visibility: hidden;
 }
 
-.modal__opened {
+.modal_opened {
   visibility: visible;
 }
 
@@ -33,6 +33,7 @@
   right: 50px;
   width: 40px;
   height: 40px;
+  cursor: pointer;
 }
 
 .modal__title {
