--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -34,6 +34,18 @@
   width: 40px;
   height: 40px;
   cursor: pointer;
+  background-image: url(../images/close.svg);
+  background-color: transparent;
+  border: none;
+  width: 40px;
+  height: 40px;
+  opacity: 40%;
+  background-position: center;
+}
+
+.modal__close-btn:hover {
+  cursor: pointer;
+  opacity: 100%;
 }
 
 .modal__title {
@@ -66,6 +78,10 @@
   line-height: 1;
 }
 
+.modal__input:hover {
+  border-color: rgba(33, 33, 33, 1);
+}
+
 .modal__submit-btn {
   width: 156px;
   padding: 18px 0;
@@ -75,16 +91,11 @@
   font-weight: 500;
   font-size: 16px;
   color: rgba(252, 245, 229, 1);
+  cursor: pointer;
 }
 
-.modal__close-btn {
-  background-image: url(../images/close.svg);
-  background-color: transparent;
-  border: none;
-  width: 40px;
-  height: 40px;
-  opacity: 40%;
-  background-position: center;
+.modal__submit-btn:hover {
+  opacity: 80%;
 }
 
 @media screen and (max-width: 627px) {
