--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -98,6 +98,44 @@
   opacity: 80%;
 }
 
+.modal__content {
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+}
+
+.modal__image {
+  height: 80vh;
+  width: 80vw;
+  margin-bottom: 0px;
+  margin-right: 0px;
+}
+
+.modal__caption {
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  color: white;
+  padding: 4px 8px;
+  background-color: rgba(33, 33, 33, 1);
+  margin: 8px auto;
+  border-radius: 8px;
+}
+
+.image__close-btn {
+  background-image: url(/images/close-light.svg);
+  height: 40px;
+  width: 40px;
+  background-color: transparent;
+  border: none;
+  display: flex;
+  position: relative;
+  margin: 0;
+  padding: 0;
+  right: 12.5px;
+}
+
 @media screen and (max-width: 627px) {
   .modal {
     padding: 0 10px;
