--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -101,14 +101,19 @@
 .modal__content {
   padding: 0;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+}
+
+.modal__image-container {
+  display: flex;
 }
 
 .modal__image {
-  height: 80vh;
-  width: 80vw;
   margin-bottom: 0px;
   margin-right: 0px;
+  max-height: 80vh;
+  max-width: 80vw;
+  border-radius: 8px;
 }
 
 .modal__caption {
@@ -119,21 +124,25 @@
   color: white;
   padding: 4px 8px;
   background-color: rgba(33, 33, 33, 1);
-  margin: 8px auto;
+  margin-top: 8px;
   border-radius: 8px;
+  max-width: fit-content;
 }
 
 .image__close-btn {
   background-image: url(/images/close-light.svg);
+  background-position: center;
+  background-repeat: no-repeat;
   height: 40px;
   width: 40px;
   background-color: transparent;
   border: none;
-  display: flex;
   position: relative;
+  cursor: pointer;
+  top: 0;
+  right: -12.5px;
   margin: 0;
   padding: 0;
-  right: 12.5px;
 }
 
 @media screen and (max-width: 627px) {
