--- a/blocks/card.css
+++ b/blocks/card.css
@@ -34,9 +34,8 @@
   border: none;
   background-color: transparent;
   opacity: 40%;
-  transition: opacity 0.5s ease-in-out;
   cursor: pointer;
-  transition: background-image 0.5s linear;
+  transition: background-image 0.5s linear, opacity 0.5s ease-in-out;
 }
 
 .card__like-btn:hover {
