--- a/blocks/card.css
+++ b/blocks/card.css
@@ -7,6 +7,10 @@
   cursor: pointer;
 }
 
+/*
+.card__image:hover {} - add image hover effect on desktop?
+*/
+
 .card__content {
   display: flex;
   align-items: center;
@@ -28,7 +32,7 @@
 }
 
 .card__like-btn {
-  background-image: url(../images/heart.svg);
+  background: url(../images/heart.svg) no-repeat;
   width: 23px;
   height: 20px;
   border: none;
@@ -52,6 +56,8 @@
   opacity: 100%;
 }
 
+/* hide delete buttons until image:hover on desktop?*/
+
 .card__delete-btn {
   background: url(/images/delete-btn.svg) center no-repeat;
   background-color: rgba(0, 0, 0, 0.3);
@@ -62,6 +68,8 @@
   position: absolute;
   margin-top: 10px;
   margin-left: 371px;
+  cursor: pointer;
+  transition: background-color 0.5s ease-in-out;
 }
 
 .card__delete-btn:hover {
