--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -84,7 +84,7 @@
   height: 14px;
   background-image: url(../images/plus.svg);
 }
-.post__add-btn {
+.profile__add-btn {
   margin-left: auto;
   height: auto;
   background-color: #212121;
