--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -87,6 +87,21 @@
   border-color: rgba(33, 33, 33, 1);
 }
 
+.modal__input_type_error {
+  border: 1px solid rgba(255, 0, 0, 0.6);
+}
+
+.modal__input_type_error:hover {
+  border: 1px solid rgba(255, 0, 0, 1);
+}
+
+.modal__error {
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  color: rgba(255, 0, 0, 0.7);
+  font-weight: 500;
+  font-size: 16px;
+}
+
 .modal__submit-btn {
   width: 156px;
   padding: 18px 0;
@@ -102,6 +117,16 @@
 
 .modal__submit-btn:hover {
   opacity: 80%;
+}
+
+.modal__submit-btn_type_disabled {
+  opacity: 50%;
+  cursor: not-allowed;
+}
+
+.modal__submit-btn_type_disabled:hover {
+  opacity: 50%;
+  cursor: not-allowed;
 }
 
 .modal__content {
